--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
     </div>
 
-    <div class="credit"> creadet by <span>Shrikant Kushwah</span> | all rights reserved </div>
+    <div class="credit"> created by <span>Shrikant Kushwah</span> | all rights reserved </div>
 
   </section>
 
